<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:tag="tab_layout_profile_settings">

    <TextView
        android:id="@+id/btn_contact"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_login_height"
        android:layout_marginStart="@dimen/margin_profile_settings"
        android:layout_marginTop="@dimen/margin_top_profile_settings"
        android:layout_marginEnd="@dimen/margin_profile_settings"
        android:background="@drawable/bg_button_login"
        android:drawableStart="@drawable/ic_btn_login_start"
        android:drawableEnd="@drawable/ic_btn_login_end"
        android:gravity="center"
        android:paddingStart="@dimen/btn_login_drawable_padding"
        android:paddingEnd="@dimen/btn_login_drawable_padding"
        android:text="@string/btn_contact"
        android:textColor="@color/text_login"
        app:layout_constraintBottom_toTopOf="@+id/btn_terms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/btn_terms"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_login_height"
        android:layout_marginStart="@dimen/margin_profile_settings"
        android:layout_marginTop="@dimen/margin_top_profile_settings"
        android:layout_marginEnd="@dimen/margin_profile_settings"
        android:background="@drawable/bg_button_login"
        android:drawableStart="@drawable/ic_btn_login_start"
        android:drawableEnd="@drawable/ic_btn_login_end"
        android:gravity="center"
        android:paddingStart="@dimen/btn_login_drawable_padding"
        android:paddingEnd="@dimen/btn_login_drawable_padding"
        android:text="@string/btn_terms"
        android:textColor="@color/text_login"
        app:layout_constraintBottom_toTopOf="@+id/btn_licences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_contact" />

    <TextView
        android:id="@+id/btn_licences"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_login_height"
        android:layout_marginStart="@dimen/margin_profile_settings"
        android:layout_marginTop="@dimen/margin_top_profile_settings"
        android:layout_marginEnd="@dimen/margin_profile_settings"
        android:background="@drawable/bg_button_login"
        android:drawableStart="@drawable/ic_btn_login_start"
        android:drawableEnd="@drawable/ic_btn_login_end"
        android:gravity="center"
        android:paddingStart="@dimen/btn_login_drawable_padding"
        android:paddingEnd="@dimen/btn_login_drawable_padding"
        android:text="@string/btn_licences"
        android:textColor="@color/text_login"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_terms" />

    <TextView
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_login_height"
        android:layout_marginStart="@dimen/margin_profile_settings"
        android:layout_marginEnd="@dimen/margin_profile_settings"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_button_login"
        android:drawableStart="@drawable/ic_btn_login_start"
        android:drawableEnd="@drawable/ic_btn_login_end"
        android:gravity="center"
        android:paddingStart="@dimen/btn_login_drawable_padding"
        android:paddingEnd="@dimen/btn_login_drawable_padding"
        android:text="@string/btn_logout"
        android:textColor="@color/text_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>