<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.auth.LoginFieldsFragment">

    <LinearLayout
        android:id="@+id/layout_login_container_fields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_login_container"
        android:background="@drawable/bg_button_login"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_login_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.7"
        app:layout_goneMarginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="6sp"
            android:text="@string/tv_email_login"
            android:textColor="@color/text_login" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/bg_edt_login"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_edt_login"
            android:textSize="@dimen/text_size_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="6sp"
            android:text="@string/tv_password_login"
            android:textColor="@color/text_login" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_edt_login"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:padding="@dimen/padding_edt_login"
            android:textSize="@dimen/text_size_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="40dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="7sp"
            android:text="Forgot password?"
            android:textColor="#276180"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/btn_confirm_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_login_height"
            android:layout_marginBottom="11dp"
            android:background="@drawable/bg_button_login"
            android:drawableStart="@drawable/ic_btn_login_start"
            android:drawableEnd="@drawable/ic_btn_login_end"
            android:gravity="center"
            android:paddingStart="@dimen/btn_login_drawable_padding"
            android:paddingEnd="@dimen/btn_login_drawable_padding"
            android:text="@string/btn_confirm_login"
            android:textColor="@color/text_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/img_zaila"
            app:layout_constraintStart_toStartOf="@id/img_zaila"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/btn_back_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_login_height"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7">

        <TextView
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_login_height"
            android:layout_marginStart="@dimen/padding_login_container"
            android:layout_marginEnd="@dimen/padding_login_container"
            android:background="@drawable/bg_button_login"
            android:drawableStart="@drawable/ic_btn_login_start"
            android:drawableEnd="@drawable/ic_btn_login_end"
            android:gravity="center"
            android:paddingStart="@dimen/btn_login_drawable_padding"
            android:paddingEnd="@dimen/btn_login_drawable_padding"
            android:text="@string/btn_back"
            android:textColor="@color/text_login" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>