<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/tab_layout_profile_zaila">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_item_profile_zaila">

        <View
            android:id="@+id/layout_languages_bg_golden"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_round_golden_profile"
            android:paddingBottom="@dimen/padding_top_bot_profile_zaila"
            app:layout_constraintBottom_toBottomOf="@+id/layout_container_item_profile"
            app:layout_constraintEnd_toEndOf="@+id/layout_container_item_profile"
            app:layout_constraintStart_toStartOf="@+id/layout_container_item_profile"
            app:layout_constraintTop_toTopOf="@+id/layout_container_item_profile"
            tools:ignore="DuplicateIds" />

        <View
            android:id="@+id/tv_label_profile_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_bottom_tv_label_profile_background"
            android:background="@drawable/bg_round_red_golden_profile_zaila"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_label_profile"
            app:layout_constraintStart_toStartOf="@id/tv_label_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_label_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_bold"
            android:lineSpacingExtra="-1sp"
            android:paddingStart="@dimen/padding_sides_profile_zaila"
            android:paddingTop="@dimen/padding_top_item_zaila"
            android:paddingEnd="@dimen/padding_sides_profile_zaila"
            android:paddingBottom="@dimen/padding_bottom_item_zaila"
            android:text="@string/tv_audio_profile"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/layout_languages_bg_white"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/stroke_layout_container_item_profile"
            android:background="@drawable/bg_round_white_profile"
            android:paddingBottom="@dimen/padding_top_bot_profile_zaila"
            app:layout_constraintBottom_toBottomOf="@+id/layout_languages_bg_golden"
            app:layout_constraintEnd_toEndOf="@+id/layout_languages_bg_golden"
            app:layout_constraintStart_toStartOf="@+id/layout_languages_bg_golden"
            app:layout_constraintTop_toTopOf="@+id/layout_languages_bg_golden" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_container_item_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/padding_sides_profile_zaila"
            android:paddingTop="@dimen/padding_top_bot_profile_zaila"
            android:paddingEnd="@dimen/padding_sides_profile_zaila"
            android:paddingBottom="@dimen/padding_top_bot_profile_zaila"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_profile">

            <TextView
                android:id="@+id/tv_audio_manual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:lineSpacingExtra="6sp"
                android:text="@string/tv_audio_manual"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/switch_audio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switch_audio"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_switch"
                android:background="@null"
                android:thumb="@drawable/switch_thumb_golden"
                android:track="@drawable/switch_track"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_audio_automatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:lineSpacingExtra="6sp"
                android:text="@string/tv_audio_automatic"
                android:textColor="@color/blue"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/switch_audio"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</merge>